TP2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    INTERPOLATION
    LBRACKET
    MULTILINE_COMMENT
    RBRACKET

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statements statement
Rule 2     statements -> statement
Rule 3     statement -> ID EQUALS expression SEMICOLON
Rule 4     statement -> ID EQUALS STRING SEMICOLON
Rule 5     statement -> PRINT LPAREN STRING RPAREN SEMICOLON
Rule 6     statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 7     statement -> expression SEMICOLON
Rule 8     statement -> FUNCTION ID LPAREN param_list RPAREN COLON expression SEMICOLON
Rule 9     statement -> FUNCTION ID LPAREN RPAREN COLON expression SEMICOLON
Rule 10    statement -> FUNCTION ID LPAREN param_list RPAREN COLON statements END
Rule 11    statement -> FUNCTION ID LPAREN RPAREN COLON
Rule 12    param_list -> param_list COMMA ID
Rule 13    param_list -> ID
Rule 14    statement -> END
Rule 15    expression -> ID EQUALS INPUT LPAREN RPAREN
Rule 16    expression -> ID EQUALS RANDOM LPAREN expression RPAREN
Rule 17    expression -> expression PLUS expression
Rule 18    expression -> expression MINUS expression
Rule 19    expression -> expression TIMES expression
Rule 20    expression -> expression DIVIDE expression
Rule 21    expression -> expression CONCAT expression
Rule 22    expression -> LPAREN expression RPAREN
Rule 23    expression -> STRING
Rule 24    expression -> NUMBER
Rule 25    expression -> ID

Terminals, with rules where they appear

COLON                : 8 9 10 11
COMMA                : 12
COMMENT              : 
CONCAT               : 21
DIVIDE               : 20
END                  : 10 14
EQUALS               : 3 4 15 16
FUNCTION             : 8 9 10 11
ID                   : 3 4 8 9 10 11 12 13 15 16 25
INPUT                : 15
INTERPOLATION        : 
LBRACKET             : 
LPAREN               : 5 6 8 9 10 11 15 16 22
MINUS                : 18
MULTILINE_COMMENT    : 
NUMBER               : 24
PLUS                 : 17
PRINT                : 5 6
RANDOM               : 16
RBRACKET             : 
RPAREN               : 5 6 8 9 10 11 15 16 22
SEMICOLON            : 3 4 5 6 7 8 9
STRING               : 4 5 23
TIMES                : 19
error                : 

Nonterminals, with rules where they appear

expression           : 3 6 7 8 9 16 17 17 18 18 19 19 20 20 21 21 22
param_list           : 8 10 12
statement            : 1 2
statements           : 1 10 0

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statements statement
    (2) statements -> . statement
    (3) statement -> . ID EQUALS expression SEMICOLON
    (4) statement -> . ID EQUALS STRING SEMICOLON
    (5) statement -> . PRINT LPAREN STRING RPAREN SEMICOLON
    (6) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (7) statement -> . expression SEMICOLON
    (8) statement -> . FUNCTION ID LPAREN param_list RPAREN COLON expression SEMICOLON
    (9) statement -> . FUNCTION ID LPAREN RPAREN COLON expression SEMICOLON
    (10) statement -> . FUNCTION ID LPAREN param_list RPAREN COLON statements END
    (11) statement -> . FUNCTION ID LPAREN RPAREN COLON
    (14) statement -> . END
    (15) expression -> . ID EQUALS INPUT LPAREN RPAREN
    (16) expression -> . ID EQUALS RANDOM LPAREN expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression CONCAT expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . STRING
    (24) expression -> . NUMBER
    (25) expression -> . ID

    ID              shift and go to state 3
    PRINT           shift and go to state 6
    FUNCTION        shift and go to state 8
    END             shift and go to state 9
    LPAREN          shift and go to state 7
    STRING          shift and go to state 5
    NUMBER          shift and go to state 10

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    expression                     shift and go to state 4

state 1

    (0) S' -> statements .
    (1) statements -> statements . statement
    (3) statement -> . ID EQUALS expression SEMICOLON
    (4) statement -> . ID EQUALS STRING SEMICOLON
    (5) statement -> . PRINT LPAREN STRING RPAREN SEMICOLON
    (6) statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (7) statement -> . expression SEMICOLON
    (8) statement -> . FUNCTION ID LPAREN param_list RPAREN COLON expression SEMICOLON
    (9) statement -> . FUNCTION ID LPAREN RPAREN COLON expression SEMICOLON
    (10) statement -> . FUNCTION ID LPAREN param_list RPAREN COLON statements END
    (11) statement -> . FUNCTION ID LPAREN RPAREN COLON
    (14) statement -> . END
    (15) expression -> . ID EQUALS INPUT LPAREN RPAREN
    (16) expression -> . ID EQUALS RANDOM LPAREN expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression CONCAT expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . STRING
    (24) expression -> . NUMBER
    (25) expression -> . ID

    ID              shift and go to state 3
    PRINT           shift and go to state 6
    FUNCTION        shift and go to state 8
    END             shift and go to state 9
    LPAREN          shift and go to state 7
    STRING          shift and go to state 5
    NUMBER          shift and go to state 10

    statement                      shift and go to state 11
    expression                     shift and go to state 4

state 2

    (2) statements -> statement .

    ID              reduce using rule 2 (statements -> statement .)
    PRINT           reduce using rule 2 (statements -> statement .)
    FUNCTION        reduce using rule 2 (statements -> statement .)
    END             reduce using rule 2 (statements -> statement .)
    LPAREN          reduce using rule 2 (statements -> statement .)
    STRING          reduce using rule 2 (statements -> statement .)
    NUMBER          reduce using rule 2 (statements -> statement .)
    $end            reduce using rule 2 (statements -> statement .)


state 3

    (3) statement -> ID . EQUALS expression SEMICOLON
    (4) statement -> ID . EQUALS STRING SEMICOLON
    (15) expression -> ID . EQUALS INPUT LPAREN RPAREN
    (16) expression -> ID . EQUALS RANDOM LPAREN expression RPAREN
    (25) expression -> ID .

    EQUALS          shift and go to state 12
    SEMICOLON       reduce using rule 25 (expression -> ID .)
    PLUS            reduce using rule 25 (expression -> ID .)
    MINUS           reduce using rule 25 (expression -> ID .)
    TIMES           reduce using rule 25 (expression -> ID .)
    DIVIDE          reduce using rule 25 (expression -> ID .)
    CONCAT          reduce using rule 25 (expression -> ID .)


state 4

    (7) statement -> expression . SEMICOLON
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . CONCAT expression

    SEMICOLON       shift and go to state 13
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    CONCAT          shift and go to state 18


state 5

    (23) expression -> STRING .

    SEMICOLON       reduce using rule 23 (expression -> STRING .)
    PLUS            reduce using rule 23 (expression -> STRING .)
    MINUS           reduce using rule 23 (expression -> STRING .)
    TIMES           reduce using rule 23 (expression -> STRING .)
    DIVIDE          reduce using rule 23 (expression -> STRING .)
    CONCAT          reduce using rule 23 (expression -> STRING .)
    RPAREN          reduce using rule 23 (expression -> STRING .)


state 6

    (5) statement -> PRINT . LPAREN STRING RPAREN SEMICOLON
    (6) statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 19


state 7

    (22) expression -> LPAREN . expression RPAREN
    (15) expression -> . ID EQUALS INPUT LPAREN RPAREN
    (16) expression -> . ID EQUALS RANDOM LPAREN expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression CONCAT expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . STRING
    (24) expression -> . NUMBER
    (25) expression -> . ID

    ID              shift and go to state 21
    LPAREN          shift and go to state 7
    STRING          shift and go to state 5
    NUMBER          shift and go to state 10

    expression                     shift and go to state 20

state 8

    (8) statement -> FUNCTION . ID LPAREN param_list RPAREN COLON expression SEMICOLON
    (9) statement -> FUNCTION . ID LPAREN RPAREN COLON expression SEMICOLON
    (10) statement -> FUNCTION . ID LPAREN param_list RPAREN COLON statements END
    (11) statement -> FUNCTION . ID LPAREN RPAREN COLON

    ID              shift and go to state 22


state 9

    (14) statement -> END .

    ID              reduce using rule 14 (statement -> END .)
    PRINT           reduce using rule 14 (statement -> END .)
    FUNCTION        reduce using rule 14 (statement -> END .)
    END             reduce using rule 14 (statement -> END .)
    LPAREN          reduce using rule 14 (statement -> END .)
    STRING          reduce using rule 14 (statement -> END .)
    NUMBER          reduce using rule 14 (statement -> END .)
    $end            reduce using rule 14 (statement -> END .)


state 10

    (24) expression -> NUMBER .

    SEMICOLON       reduce using rule 24 (expression -> NUMBER .)
    PLUS            reduce using rule 24 (expression -> NUMBER .)
    MINUS           reduce using rule 24 (expression -> NUMBER .)
    TIMES           reduce using rule 24 (expression -> NUMBER .)
    DIVIDE          reduce using rule 24 (expression -> NUMBER .)
    CONCAT          reduce using rule 24 (expression -> NUMBER .)
    RPAREN          reduce using rule 24 (expression -> NUMBER .)


state 11

    (1) statements -> statements statement .

    ID              reduce using rule 1 (statements -> statements statement .)
    PRINT           reduce using rule 1 (statements -> statements statement .)
    FUNCTION        reduce using rule 1 (statements -> statements statement .)
    END             reduce using rule 1 (statements -> statements statement .)
    LPAREN          reduce using rule 1 (statements -> statements statement .)
    STRING          reduce using rule 1 (statements -> statements statement .)
    NUMBER          reduce using rule 1 (statements -> statements statement .)
    $end            reduce using rule 1 (statements -> statements statement .)


state 12

    (3) statement -> ID EQUALS . expression SEMICOLON
    (4) statement -> ID EQUALS . STRING SEMICOLON
    (15) expression -> ID EQUALS . INPUT LPAREN RPAREN
    (16) expression -> ID EQUALS . RANDOM LPAREN expression RPAREN
    (15) expression -> . ID EQUALS INPUT LPAREN RPAREN
    (16) expression -> . ID EQUALS RANDOM LPAREN expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression CONCAT expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . STRING
    (24) expression -> . NUMBER
    (25) expression -> . ID

    STRING          shift and go to state 24
    INPUT           shift and go to state 25
    RANDOM          shift and go to state 26
    ID              shift and go to state 21
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 10

    expression                     shift and go to state 23

state 13

    (7) statement -> expression SEMICOLON .

    ID              reduce using rule 7 (statement -> expression SEMICOLON .)
    PRINT           reduce using rule 7 (statement -> expression SEMICOLON .)
    FUNCTION        reduce using rule 7 (statement -> expression SEMICOLON .)
    END             reduce using rule 7 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 7 (statement -> expression SEMICOLON .)
    STRING          reduce using rule 7 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 7 (statement -> expression SEMICOLON .)
    $end            reduce using rule 7 (statement -> expression SEMICOLON .)


state 14

    (17) expression -> expression PLUS . expression
    (15) expression -> . ID EQUALS INPUT LPAREN RPAREN
    (16) expression -> . ID EQUALS RANDOM LPAREN expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression CONCAT expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . STRING
    (24) expression -> . NUMBER
    (25) expression -> . ID

    ID              shift and go to state 21
    LPAREN          shift and go to state 7
    STRING          shift and go to state 5
    NUMBER          shift and go to state 10

    expression                     shift and go to state 27

state 15

    (18) expression -> expression MINUS . expression
    (15) expression -> . ID EQUALS INPUT LPAREN RPAREN
    (16) expression -> . ID EQUALS RANDOM LPAREN expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression CONCAT expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . STRING
    (24) expression -> . NUMBER
    (25) expression -> . ID

    ID              shift and go to state 21
    LPAREN          shift and go to state 7
    STRING          shift and go to state 5
    NUMBER          shift and go to state 10

    expression                     shift and go to state 28

state 16

    (19) expression -> expression TIMES . expression
    (15) expression -> . ID EQUALS INPUT LPAREN RPAREN
    (16) expression -> . ID EQUALS RANDOM LPAREN expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression CONCAT expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . STRING
    (24) expression -> . NUMBER
    (25) expression -> . ID

    ID              shift and go to state 21
    LPAREN          shift and go to state 7
    STRING          shift and go to state 5
    NUMBER          shift and go to state 10

    expression                     shift and go to state 29

state 17

    (20) expression -> expression DIVIDE . expression
    (15) expression -> . ID EQUALS INPUT LPAREN RPAREN
    (16) expression -> . ID EQUALS RANDOM LPAREN expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression CONCAT expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . STRING
    (24) expression -> . NUMBER
    (25) expression -> . ID

    ID              shift and go to state 21
    LPAREN          shift and go to state 7
    STRING          shift and go to state 5
    NUMBER          shift and go to state 10

    expression                     shift and go to state 30

state 18

    (21) expression -> expression CONCAT . expression
    (15) expression -> . ID EQUALS INPUT LPAREN RPAREN
    (16) expression -> . ID EQUALS RANDOM LPAREN expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression CONCAT expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . STRING
    (24) expression -> . NUMBER
    (25) expression -> . ID

    ID              shift and go to state 21
    LPAREN          shift and go to state 7
    STRING          shift and go to state 5
    NUMBER          shift and go to state 10

    expression                     shift and go to state 31

state 19

    (5) statement -> PRINT LPAREN . STRING RPAREN SEMICOLON
    (6) statement -> PRINT LPAREN . expression RPAREN SEMICOLON
    (15) expression -> . ID EQUALS INPUT LPAREN RPAREN
    (16) expression -> . ID EQUALS RANDOM LPAREN expression RPAREN
    (17) expression -> . expression PLUS expression
    (18) expression -> . expression MINUS expression
    (19) expression -> . expression TIMES expression
    (20) expression -> . expression DIVIDE expression
    (21) expression -> . expression CONCAT expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . STRING
    (24) expression -> . NUMBER
    (25) expression -> . ID

    STRING          shift and go to state 32
    ID              shift and go to state 21
    LPAREN          shift and go to state 7
    NUMBER          shift and go to state 10

    expression                     shift and go to state 33

state 20

    (22) expression -> LPAREN expression . RPAREN
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . CONCAT expression

    RPAREN          shift and go to state 34
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    CONCAT          shift and go to state 18


state 21

    (15) expression -> ID . EQUALS INPUT LPAREN RPAREN
    (16) expression -> ID . EQUALS RANDOM LPAREN expression RPAREN
    (25) expression -> ID .

    EQUALS          shift and go to state 35
    RPAREN          reduce using rule 25 (expression -> ID .)
    PLUS            reduce using rule 25 (expression -> ID .)
    MINUS           reduce using rule 25 (expression -> ID .)
    TIMES           reduce using rule 25 (expression -> ID .)
    DIVIDE          reduce using rule 25 (expression -> ID .)
    CONCAT          reduce using rule 25 (expression -> ID .)
    SEMICOLON       reduce using rule 25 (expression -> ID .)


state 22

    (8) statement -> FUNCTION ID . LPAREN param_list RPAREN COLON expression SEMICOLON
    (9) statement -> FUNCTION ID . LPAREN RPAREN COLON expression SEMICOLON
    (10) statement -> FUNCTION ID . LPAREN param_list RPAREN COLON statements END
    (11) statement -> FUNCTION ID . LPAREN RPAREN COLON

    LPAREN          shift and go to state 36


state 23

    (3) statement -> ID EQUALS expression . SEMICOLON
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . CONCAT expression

    SEMICOLON       shift and go to state 37
    PLUS            shift and go to state 14
    MINUS           shift and go to state 15
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    CONCAT          shift and go to state 18


state 24

    (4) statement -> ID EQUALS STRING . SEMICOLON
    (23) expression -> STRING .

  ! shift/reduce conflict for SEMICOLON resolved as shift
    SEMICOLON       shift and go to state 38
    PLUS            reduce using rule 23 (expression -> STRING .)
    MINUS           reduce using rule 23 (expression -> STRING .)
    TIMES           reduce using rule 23 (expression -> STRING .)
    DIVIDE          reduce using rule 23 (expression -> STRING .)
    CONCAT          reduce using rule 23 (expression -> STRING .)

  ! SEMICOLON       [ reduce using rule 23 (expression -> STRING .) ]


state 25

    (15) expression -> ID EQUALS INPUT . LPAREN RPAREN

    LPAREN          shift and go to state 39


state 26

    (16) expression -> ID EQUALS RANDOM . LPAREN expression RPAREN

    LPAREN          shift and go to state 40


state 27

    (17) expression -> expression PLUS expression .
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . CONCAT expression

    SEMICOLON       reduce using rule 17 (expression -> expression PLUS expression .)
    PLUS            reduce using rule 17 (expression -> expression PLUS expression .)
    MINUS           reduce using rule 17 (expression -> expression PLUS expression .)
    RPAREN          reduce using rule 17 (expression -> expression PLUS expression .)
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    CONCAT          shift and go to state 18

  ! TIMES           [ reduce using rule 17 (expression -> expression PLUS expression .) ]
  ! DIVIDE          [ reduce using rule 17 (expression -> expression PLUS expression .) ]
  ! CONCAT          [ reduce using rule 17 (expression -> expression PLUS expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]


state 28

    (18) expression -> expression MINUS expression .
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . CONCAT expression

    SEMICOLON       reduce using rule 18 (expression -> expression MINUS expression .)
    PLUS            reduce using rule 18 (expression -> expression MINUS expression .)
    MINUS           reduce using rule 18 (expression -> expression MINUS expression .)
    RPAREN          reduce using rule 18 (expression -> expression MINUS expression .)
    TIMES           shift and go to state 16
    DIVIDE          shift and go to state 17
    CONCAT          shift and go to state 18

  ! TIMES           [ reduce using rule 18 (expression -> expression MINUS expression .) ]
  ! DIVIDE          [ reduce using rule 18 (expression -> expression MINUS expression .) ]
  ! CONCAT          [ reduce using rule 18 (expression -> expression MINUS expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]


state 29

    (19) expression -> expression TIMES expression .
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . CONCAT expression

    SEMICOLON       reduce using rule 19 (expression -> expression TIMES expression .)
    PLUS            reduce using rule 19 (expression -> expression TIMES expression .)
    MINUS           reduce using rule 19 (expression -> expression TIMES expression .)
    TIMES           reduce using rule 19 (expression -> expression TIMES expression .)
    DIVIDE          reduce using rule 19 (expression -> expression TIMES expression .)
    RPAREN          reduce using rule 19 (expression -> expression TIMES expression .)
    CONCAT          shift and go to state 18

  ! CONCAT          [ reduce using rule 19 (expression -> expression TIMES expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! TIMES           [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]


state 30

    (20) expression -> expression DIVIDE expression .
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . CONCAT expression

    SEMICOLON       reduce using rule 20 (expression -> expression DIVIDE expression .)
    PLUS            reduce using rule 20 (expression -> expression DIVIDE expression .)
    MINUS           reduce using rule 20 (expression -> expression DIVIDE expression .)
    TIMES           reduce using rule 20 (expression -> expression DIVIDE expression .)
    DIVIDE          reduce using rule 20 (expression -> expression DIVIDE expression .)
    RPAREN          reduce using rule 20 (expression -> expression DIVIDE expression .)
    CONCAT          shift and go to state 18

  ! CONCAT          [ reduce using rule 20 (expression -> expression DIVIDE expression .) ]
  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! TIMES           [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]


state 31

    (21) expression -> expression CONCAT expression .
    (17) expression -> expression . PLUS expression
    (18) expression -> expression . MINUS expression
    (19) expression -> expression . TIMES expression
    (20) expression -> expression . DIVIDE expression
    (21) expression -> expression . CONCAT expression

    SEMICOLON       reduce using rule 21 (expression -> expression CONCAT expression .)
    PLUS            reduce using rule 21 (expression -> expression CONCAT expression .)
    MINUS           reduce using rule 21 (expression -> expression CONCAT expression .)
    TIMES           reduce using rule 21 (expression -> expression CONCAT expression .)
    DIVIDE          reduce using rule 21 (expression -> expression CONCAT expression .)
    CONCAT          reduce using rule 21 (expression -> expression CONCAT expression .)
    RPAREN          reduce using rule 21 (expression -> expression CONCAT expression .)

  ! PLUS            [ shift and go to state 14 ]
  ! MINUS           [ shift and go to state 15 ]
  ! TIMES           [ shift and go to state 16 ]
  ! DIVIDE          [ shift and go to state 17 ]
  ! CONCAT          [ shift and go to state 18 ]


state 32
